<resources>
    <string name="app_name">SmartAttendanceSystem</string>
    <!-- Strings related to login -->

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="student_id">Student Id</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email Address</string>
    <string name="check_registered">Registered?</string>
    <string name="new_register">Not Register?</string>
    <string name="register">Done</string>
    <string name="otp">OTP</string>
    <string name="msg">Please submit otp to make you present</string>
    <string name="hello_msg">Hello, Mr. Bean</string>
    <string name="title_login">Login</string>
    <string name="title_otp">OTP</string>
    <string name="Register">Register</string>
    <string name="splash_msg">Smart Attendance System</string>
    <string name="log_out">Log Out</string>
    <string name="re_register">RE-REGISTER</string>
</resources>
